tests/specs/optional_return_type.txt
# mod.ts
export function foo(a: number) {
    return a;
  }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function foo(a: number) {
  | ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:1:1
  | 
1 | export function foo(a: number) {
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function foo(a: number)


# output.json
[
  {
    "name": "foo",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [
            {
              "kind": "identifier",
              "name": "a",
              "optional": false,
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "value": "number"
              }
            }
          ],
          "returnType": null,
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  }
]
